# lostark-refinement

./: Cargo.toml  README.md  build_web.sh
docs/: eframe_template.js  eframe_template_bg.wasm  index.html  lost_ark_refiner.js  lost_ark_refiner_bg.wasm  sw.js
src/: app.rs  lib.rs  main.rs
src/app/: chance.rs  solution.rs  wasm_worker.rs  widgets.rs  worker_thread.rs
src/app/widgets/: game_state.rs  simulation.rs  weights.rs
